Update image source in image section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div id="image-section" class="hidden">
             <h2>Akses Diberikan</h2>
-            <img src="https://via.placeholder.com/400x400?text=FOTO+RAHASIA" alt="Muka Saya" class="secret-img">
+            <img src="https://i.imgur.com/ysknLZy.jpeg" alt="Muka Saya" class="secret-img">
             <br>
             <button onclick="location.reload()" class="btn-back">Kunci Kembali</button>
         </div>
