Update title and add image gallery section

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Situs Rahasia</title>
+    <title>Galeri Rahasia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
         <div id="login-section">
-            <h1>Akses Terbatas</h1>
+            <h1>🔒 Akses Terbatas</h1>
             <p>Untuk melihat gambar muka saya, harus memasuki kata sandi-nya.</p>
             
             <div class="input-group">
@@ -21,9 +21,17 @@
         </div>
 
         <div id="image-section" class="hidden">
-            <h2>Akses Diberikan</h2>
-            <img src="https://i.imgur.com/ysknLZy.jpeg" alt="Muka Saya" class="secret-img">
-            <br>
+            <h2>🔓 Akses Diberikan</h2>
+            
+            <div class="gallery">
+                <img src="https://via.placeholder.com/150/0000FF/808080?text=Foto+1" alt="Foto 1">
+                <img src="https://via.placeholder.com/150/FF0000/FFFFFF?text=Foto+2" alt="Foto 2">
+                <img src="https://via.placeholder.com/150/FFFF00/000000?text=Foto+3" alt="Foto 3">
+                <img src="https://via.placeholder.com/150/000000/FFFFFF?text=Foto+4" alt="Foto 4">
+                <img src="https://via.placeholder.com/150/008000/FFFFFF?text=Foto+5" alt="Foto 5">
+                <img src="https://via.placeholder.com/150/800080/FFFFFF?text=Foto+6" alt="Foto 6">
+            </div>
+
             <button onclick="location.reload()" class="btn-back">Kunci Kembali</button>
         </div>
     </div>
