Update image sources in the gallery section
Replaced placeholder images with actual image URLs.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
             <h2>🔓 Akses Diberikan</h2>
             
             <div class="gallery">
-                <img src="https://via.placeholder.com/150/0000FF/808080?text=Foto+1" alt="Foto 1">
-                <img src="https://via.placeholder.com/150/FF0000/FFFFFF?text=Foto+2" alt="Foto 2">
-                <img src="https://via.placeholder.com/150/FFFF00/000000?text=Foto+3" alt="Foto 3">
-                <img src="https://via.placeholder.com/150/000000/FFFFFF?text=Foto+4" alt="Foto 4">
-                <img src="https://via.placeholder.com/150/008000/FFFFFF?text=Foto+5" alt="Foto 5">
-                <img src="https://via.placeholder.com/150/800080/FFFFFF?text=Foto+6" alt="Foto 6">
+                <img src="https://i.imgur.com/ysknLZy.jpeg" alt="Foto 1">
+                <img src="https://i.imgur.com/OX96TuN.jpeg" alt="Foto 2">
+                <img src="https://i.imgur.com/fKc8cnh.jpeg" alt="Foto 3">
             </div>
 
             <button onclick="location.reload()" class="btn-back">Kunci Kembali</button>
