Replace image source for Foto 3 in gallery

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="gallery">
                 <img src="https://i.imgur.com/ysknLZy.jpeg" alt="Foto 1">
                 <img src="https://i.imgur.com/OX96TuN.jpeg" alt="Foto 2">
-                <img src="https://i.imgur.com/fKc8cnh.jpeg" alt="Foto 3">
+                <img src="https://i.imgur.com/kiewJ3P.jpeg" alt="Foto 3">
             </div>
 
             <button onclick="location.reload()" class="btn-back">Kunci Kembali</button>
