Update password prompt message in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="login-section">
             <h1>🔒 Akses Terbatas</h1>
-            <p>Untuk melihat gambar muka saya, harus memasuki kata sandi-nya.</p>
+            <p>Untuk melihat gambar muka Para Dev, harus memasuki kata sandi-nya.</p>
             
             <div class="input-group">
                 <input type="password" id="passwordInput" placeholder="Masukkan kata sandi...">
